...
internal sealed interface AppFabDestination {
    val label: String
    val accessibilityLabel: String

    data object NewProgramme : AppFabDestination {
        override val label = "New programme"
        override val accessibilityLabel = "Create new programme"
    }

    data object AddProgrammeItem : AppFabDestination {
        override val label = "Add"
        override val accessibilityLabel = "Add exercise or stretch"
    }

    data object NewHabit : AppFabDestination {
        override val label = "New habit"
        override val accessibilityLabel = "Create new habit"
    }
...
